miniextendr-macros/tests/ui/derive_altrep_complex_dataptr_plus_subset.rs
//! Test: ALTREP complex rejects dataptr + subset together.

use miniextendr_macros::AltrepComplex;

#[derive(AltrepComplex)]
#[altrep(dataptr, subset)]
struct MyData {
    len: usize,
}

fn main() {}
